@@ -124,7 +124,7 @@
 			  <property name="fixed_height_mode">False</property>
 			  <property name="hover_selection">False</property>
 			  <property name="hover_expand">False</property>
-			  <signal name="row_activated" handler="on_playlist_treeview_row_activate" last_modification_time="Tue, 18 Sep 2007 20:52:52 GMT"/>
+			  <signal name="row_activated" handler="on_play_button_clicked" last_modification_time="Sun, 03 Feb 2008 21:30:52 GMT"/>
 			  <signal name="button_release_event" handler="on_playlist_treeview_button_release" last_modification_time="Tue, 18 Sep 2007 20:52:39 GMT"/>
 			</widget>
 		      </child>
